# litentry-juniper-api

./: Cargo.toml  Notes.txt  README.md  config.json
db/: Cargo.toml
db/src/: event_table.rs  graphql.txt  identities_table.rs  lib.rs  litentry_table.rs  models.rs  schema.rs  sql.txt  table.sql  tokens_table.rs  users_table.rs
hyper/: Cargo.toml
hyper/src/: hyper_server.rs  lib.rs  request.rs  response.rs  tojson.rs
ipfs/: Cargo.toml
ipfs/src/: lib.rs
litentry/: Cargo.toml
litentry/src/: lib.rs
scripts/: Dockerfile  build_docker.sh  deploy.txt  init_mysql.py  send_query.py
src/: db.rs  main.rs  model.rs  model.rs.bak  schema.rs  subscribe.rs
substrate/: Cargo.toml
substrate/client/: Cargo.toml
substrate/client/src/: lib.rs  main.rs  main.rs.bak  subxt.rs
substrate/rpc/: Cargo.toml
substrate/rpc/src/: lib.rs
substrate/tests/: Cargo.toml
substrate/tests/src/: main.rs  test_account.rs  test_author.rs  test_chain.rs  test_client.rs  test_state.rs  test_system.rs  transaction.rs  tx_can_send.rs  tx_format.txt  tx_from_subkey.rs  workable_tx.rs
substrate/utils/: Cargo.toml
substrate/utils/src/: lib.rs
tests/: Cargo.toml
tests/src/: main.rs  test_get_balance.rs  test_get_sudo_key_storage.rs  test_http_post.rs  test_requests.rs
warp/: Cargo.toml
warp/src/: db.rs  gql.rs  main.rs  model.rs
ws/: Cargo.toml
ws/src/: lib.rs  substrate.rs
