[package]
name = "litentry-juniper-api"
version = "0.1.0"
authors = ["juniuszhou <junius.zhou@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7"
juniper = "0.12.0"
juniper_hyper = "0.3.0"
juniper_codegen = "0.12.0"
futures = "0.1"
tokio = "0.1.8"
hyper = "0.12"
tokio-threadpool = "0.1.7"
log = "0.4"
env_logger = "0.5"
pretty_env_logger = "0.3.0"
websocket = "0.22.4"
ipfsapi = "0.2"

litentry-juniper-database = {path = "db"}
litentry-juniper-ipfs = {path = "ipfs"}
litentry-juniper-ws = {path = "ws"}
