[package]
name = "litentry-hyper"
version = "0.1.0"
authors = ["juniuszhou <junius.zhou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.10.16"
futures-util = "0.2.1"
serde = "1.0"
serde_json = "1.0"
pretty_env_logger = "0.3.0"
futures = "0.1.28"
tokio = "0.1.22"

