[package]
name = "litentry-warp"
version = "0.1.0"
authors = ["juniuszhou <junius.zhou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.12.0"
mongodb = "0.3"
bson = "0.12"
serde = "1"
serde_derive = "1"
warp = "0.1"
serde_json = "1"
failure = "0.1"
failure_derive = "0.1"
