[package]
name = "litentry-substrate-client"
version = "0.1.0"
authors = ["zhoujun <junius.zhou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
url = "1.7.2"
futures = "0.1.28"
tokio = "0.2.0-alpha.1"
substrate-subxt = {git = "https://github.com/paritytech/substrate-subxt", version = "0.1.0"}
