[[bin]]
name = "litentry-substrate-client"
path = "src/main.rs"

[package]
name = "litentry-substrate-client"
version = "0.1.0"
authors = ["zhoujun <junius.zhou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
substrate-api-client = {git = "https://github.com/scs/substrate-api-client"}
litentry-substrate-utils = {path = "../utils"}
litentry-juniper-database = {path = "../../db"}

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate'
rev = '6d47fd919b4d86e4348c6c19d99c80372587d215'
package = "substrate-primitives"

[dependencies.node-primitives]
git = 'https://github.com/paritytech/substrate'
rev = '6d47fd919b4d86e4348c6c19d99c80372587d215'
package = "node-primitives"

[dependencies.node-runtime]
git = 'https://github.com/paritytech/substrate'
package = "node-runtime"
rev = '6d47fd919b4d86e4348c6c19d99c80372587d215'

[dependencies.system]
git = 'https://github.com/paritytech/substrate'
rev = '6d47fd919b4d86e4348c6c19d99c80372587d215'
package = "srml-system"

[dependencies.srml-balances]
git = 'https://github.com/paritytech/substrate'
rev = '6d47fd919b4d86e4348c6c19d99c80372587d215'
package = "srml-balances"